--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="title_activity_base">BaseActivity</string>
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_nfc">NFCActivity</string>
+    <string name="title_activity_nfcwrite">NFCWriteActivity</string>
 
 </resources>
